--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ngày của những đóa hoa 20/10</title>
+  <title>Ngày gì ấy nhở</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;700&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -457,8 +457,10 @@
       font-size: 18px;
       line-height: 1.8;
       color: #555;
-      text-align: center;
+      text-align: left;
       margin-bottom: 30px;
+      white-space: pre-line;
+      word-wrap: break-word;
     }
 
     .action-buttons {
@@ -874,7 +876,22 @@
       },
       'gud': {
         title: 'Gửi Thảo Ngu không yên🥰',
-        content: 'helo hi halo heli, t mún gửi lẹ mà lại phân vân chả biết nên gửi giờ nào, thường mấy cái sến như này t phải có mood t mới thiệt sự để tâm hehe. Hay nhể, lúc đầu thấy m quen lz chung với t mà hắn cũng ấn tượng m nên nói chuyện xíu xong cũng chả định tiếp xúc gì thêm, tới chơi chung ở lớp toán, xong lại đi tới giờ này (thiệt ra hồi nghỉ thầy Quốc xong t nghĩ chắc hội này sắp trở thành 1 kỉ niệm nữa r, đâu nghĩ còn duy trì đâu :D), chắc trùng suất lớp thầy Thanh cũng là cái duyên đó. Cảm ơn gud nhìu, vì vừa là 1 talker vừa là 1 listener xịn mất mẹ cái bàn, vốn t là cái đứa cạy mồm không chịu nói gì về vấn đề của bản thân, cũng chẳng hay tâm sự chuyện này nọ mà gud lại có thể để mớ này tuồn ra một cách nhẹ nhàng, chả cần cạy cơ =))). Đã nhiều lần t nghi ngờ chính mình, t chẳng biết sao t lại hứng phải nhiều chuyện không tốt đến thế, rồi chỉ muốn buông thả tất cả. Đang nghĩ ngon ơ v tự dưng có đám người như gud hiện lên cản mất r, ai cho mà ngáng đường v? Cảm ơn Thảo Ngu đã và đang xuất hiện trên con đường lớn lên của t, lại còn là một trong những nguồn lực để t cố gắng nhìu hơn. Biết là chẳng còn gần được bao nhiêu ngày nữa, thôi còn bao nhiêu, vui bấy nhiêu đi ha, cố lên. M nghĩ tu 10 kiếp mới có được bạn như t, t cũng nghĩ t tu 10 kiếp mới có được bạn như m v đó, trộm vía siu tốt mà còn bù trừ hehehehe. T cũng luôn ở đây sẵn lòng lắng nghe, chia sẻ với m bất kì thứ gì m muốn, tính t quý bạn, chiều bạn lắm nên đừng ngại. Sẵn đó khai thác giá trị của t tới đâu hay đó đi, k là sau này lỡ đâu t thành người nổi tiếng r khó liên lạc lắm nghe B). Ghét mừ hai ghê, làm gì cũng thấy kỉ niệm, nói câu nào cũng nghe ra lần cuối, cảm ơn gud đã giúp đời học trò của t đáng nhớ và đẹp quá chừng, lẽ ra mấy câu này chẳng nên lấy danh nghĩa ngày gì cả, mà thôi mình lợi dụng dịp lễ nói luôn ehe. Chúc gud sống thật tốt, nhìn đâu cũng thấy niềm vui, sớm tìm được cho mình nhiều thành tựu, nhiều con đường thuận lợi, đẹp đẽ và chúc gud tìm được lương duyên với người có thể làm gud thấy tình yêu thật đẹp và là thứ đáng đầu tư vô điều kiện nhen. hapi wu mần dayyy ',
+        content: `helo hi halo heli, t mún gửi lẹ mà lại phân vân chả biết nên gửi giờ nào. Thường mấy cái sến như này t phải có mood mới thiệt sự để tâm hehe. Hay nhỉ, lúc đầu thấy m quen lz chung với t mà hắn cũng ấn tượng m, nên t mới nói chuyện xíu thôi chứ cũng chả định tiếp xúc gì thêm. Ai ngờ tới chơi chung ở lớp toán, rồi đi tới tận giờ này luôn (thiệt ra hồi nghỉ thầy Quốc xong t nghĩ chắc hội này sắp trở thành 1 kỉ niệm nữa r, đâu nghĩ còn duy trì đâu :D). Chắc trùng suất lớp thầy Thanh cũng là cái duyên đó.  
+
+Cảm ơn gud nhìu nha, vừa là 1 talker vừa là 1 listener xịn mất mẹ cái bàn. Vốn dĩ t là cái đứa cạy mồm không chịu nói gì về bản thân, cũng chẳng hay tâm sự chuyện này nọ, vậy mà gud lại khiến mớ này tuồn ra nhẹ nhàng, không cần ai cạy cơ luôn =))).  
+
+Đã nhiều lần t nghi ngờ chính mình, không hiểu sao t lại hứng phải nhiều chuyện không vui đến thế, có lúc chỉ muốn buông hết cho rồi. Đang nghĩ ngon ơ v thì tự dưng có đám người như gud xuất hiện cản mất, ai cho mà ngáng đường zị hả?  
+
+Cảm ơn Thảo Ngu đã và đang xuất hiện trên con đường lớn lên của t, lại còn là một trong những nguồn lực để t cố gắng nhìu hơn. Biết là chẳng còn gần nhau được bao nhiêu ngày nữa, thôi còn bao nhiêu, vui bấy nhiêu ha, cố lên. M nghĩ tu 10 kiếp mới có được bạn như t, t cũng nghĩ t tu 10 kiếp mới có được bạn như m v đó, trộm vía siu tốt mà còn bù trừ cho nhau hehehehe.  
+
+T cũng luôn ở đây, sẵn lòng lắng nghe và chia sẻ với m bất kì thứ gì m muốn. Tính t quý bạn, chiều bạn lắm nên đừng có ngại. Sẵn đó khai thác giá trị của t tới đâu hay đó đi, k là sau này lỡ t nổi tiếng rồi khó liên lạc lắm nghe B).  
+
+Ghét mừ hai ghê, làm gì cũng thấy kỉ niệm, nói câu nào cũng nghe ra lần cuối. Cảm ơn gud đã làm cho đời học trò của t đáng nhớ và đẹp quá chừng. Lẽ ra mấy câu này chẳng cần nhân ngày gì đâu, mà thôi, tiện dịp lễ nói luôn ehe.  
+
+Chúc gud sống thật tốt, nhìn đâu cũng thấy niềm vui, sớm đạt được nhiều thành tựu, gặp nhiều con đường thuận lợi, đẹp đẽ, và tìm được lương duyên với người khiến gud cảm thấy tình yêu là thứ thật đẹp, thật đáng để đầu tư vô điều kiện nha.  
+
+hapi wu mần dayyy.
+`,
         photos: [
           'gud.png',
           'gud (1).png',
@@ -890,7 +907,20 @@
       },
       'hld': {
         title: 'Helô hêlo nhă',
-        content: 'lâu qa r mới viết gửi như này cho m hehe, t còn phân vân chả biết nên gửi giờ nào nữa cơ. Qua khoảng thời gian kha khá dài từ khi bắt đầu quen biết với dung, dung vẫn làm t siu ấn tượng về cách m nhìn nhận thế giới và cảm nhận mọi thứ xung quanh. Có thể t với m chưa thiệt sự có nhiều tiếp xúc, cũng không nói chuyện mấy, nhưng cảm ơn dung đã giúp t nhìn nhận nhiều điều t cần học hỏi thêm. =))) bình thường t si nghĩ cả mớ thứ mà viết ra thì lại tịt êhe. Nói sao ta, có thể là từ những lần nói chuyện với m, những bài m viết, ảnh m đăng mà t học được cái nhìn mới, học cả cách để bản thân không quá khô khan và nhìn nhận mọi thứ nhẹ nhàng hơn. Những chuyện hồi lẩu lầu lâu của mình t có si nghĩ nhìu lắm, nên t cũng mún xin lỗi dung vì đã có nhiều lúc phản ứng không hay, lại còn áp đặt các kỉu. Lạ nhể, qua nhiều thứ r, t vẫn thấy dù t có thể dự tính dc nhiều thứ, đoán dc nhiều tình huống mà riêng m lại khắc chế dc hết, vui á chớ =))))). Hồi trước chả biết sao mà ấn tượng về m của t giống như cún con í, dạng nó ồn ồn mà dui, lại còn nhoi nhoi lung tung, hay để ý, tò mò mà mệt rồi thì vo lại 1 cục thui nên t cũng tò mò nhìu lắm. Cảm ơn dung đã cho mình dc trở lại như bình thường, với t thấy như v là mừng lắm rồi cơ. Ti tỉ thứ còn cất nhưng chưa nói dc, thôi để ủ đó đào lên nhâm nhi sau he. T vui vì có thể gặp và quen dc dung, cảm ơn m đã góp thêm màu cho đời học trò của phúc, đẹp lắm. Được vô tư chẳng còn bao nhiêu ngày nữa, sắp phải tập làm người lớn, tập nghĩ lớn rùi, thôi thì vui được bao nhiêu mừng bấy nhiêu ha, ghét ghê làm gì cũng thấy kỉ niệm, nói gì cũng nghe ra lần cuối. Chúc dung và gia đình thiệt nhiều sức khỏe, có những ngày thiệt đẹp, nhìn đâu cũng thấy niềm vui, đạt được những điều m mong muốn và mơ ước (nhớ ra HN để t ra với), thêm cả ngủ ngon, không bị quấy bởi rối loạn giấc ngủ nữa. Ảnh m chụp đẹp cực, nhớ cho t xin với nhen =))). hapi wu mần dayyy',
+        content: `lâu qa r mới viết gửi cho m như này hehe, t còn phân vân chả biết nên gửi giờ nào nữa cơ. Tính ra cũng kha khá lâu từ lúc t bắt đầu quen biết với dung, mà tới giờ dung vẫn làm t siu ấn tượng bởi cách m nhìn nhận thế giới và cảm nhận mọi thứ xung quanh. Có thể t với m chưa thật sự tiếp xúc nhiều, cũng chẳng nói chuyện bao nhiêu, mà cảm ơn dung nhen, t học được cách nhìn nhận nhiều điều t cần học hỏi thêm từ m nề. Bình thường t toàn nghĩ cả mớ thứ trong đầu mà tới lúc viết thì lại tịt êhe.  
+
+Nói sao ta, chắc là nhờ mấy lần nói chuyện với m, mấy bài m viết mà t thấy bản thân dần học được cái nhìn mới hơn, cũng học được cách để không khô khan quá và biết nhìn mọi thứ nhẹ nhàng hơn. Những chuyện hồi lẩu lầu lâu trước đây t si nghĩ cũng nhìu, t cũng muốn xin lỗi dung vì có lúc t phản ứng không hay, lại còn áp đặt kiểu linh tinh các kiểu ...  
+
+Lạ nhể, qua bao lâu r mà t vẫn thấy dù t có thể dự tính dc nhiều thứ mà lại không hiệu quả với mỗi m =)))). Hồi trước không hiểu sao mà ấn tượng về m trong đầu t lại giống cún con í, dạng vừa ồn ồn mà dui, hay nhoi nhoi lung tung, tò mò tùm lum, rồi khi mệt thì nằm cuộn một cục.  
+
+Bây giờ trộm vía có thể nói chuyện lại bình thường là thấy mừng r kkkk. Còn ti tỉ thứ chưa nói mà chắc để dành, ủ đó, bữa khác đào lên nhâm nhi sau. Thiệt sự vui vì được gặp và quen với dung, cảm ơn m đã góp thêm một mảng màu cho đời học trò của t, đẹp lắm.  
+
+Được vô tư chẳng bao lâu nữa, chuẩn bị phải tập làm người lớn, tập nghĩ lớn rồi, thôi thì còn bao nhiêu thời gian, vui bấy nhiêu ha. Ghét nhỉ, làm gì cũng thấy kỉ niệm, nói câu nào cũng nghe ra lần cuối.  
+
+Chúc dung và gia đình thiệt nhiều sức khỏe, có những ngày đẹp đẽ, bình yên, nhìn đâu cũng thấy niềm vui. Mong m sớm đạt được những điều m muốn, cả mơ ước nữa (nhớ ra HN, t ra với). À, ảnh m chụp đẹp cực, sau này cho t xin với nhen hêhe.  
+
+hapi wu mần dayyy.
+`,
         photos: [
           'hld.png',
           'hld (1).png',
